# project-dailyupdate

./: .env.example  .gitignore  pyproject.toml  railway.toml
.claude/: settings.local.json
src/: __init__.py  config.py  main.py
src/collectors/: __init__.py  base.py  reddit.py  rss.py
src/delivery/: __init__.py  email.py
src/delivery/templates/: briefing.html
src/processors/: __init__.py  deduper.py  summarizer.py
src/storage/: __init__.py  db.py
src/utils/: __init__.py  logging.py
tests/: __init__.py
